# roci

./: Cargo.toml  LICENSE  README.md  roci.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  note.rs
tests/: it.rs
tests/fixtures/curl/: roci.toml
tests/fixtures/curl-ubuntu/: gnoci.toml
