[package]
name = "gnoci"
version = "0.0.1"
description = "Small OCI image builder"
homepage = "https://github.com/tofay/gnoci"
repository = "https://github.com/tofay/gnoci"
documentation = "https://docs.rs/gnoci"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.15.11"
env_logger = "0.11.8"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
lddtree = "0.3.7"
log = "0.4.27"
ocidir = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
toml = { version = "0.8.23" }
xattr = "1.5.0"

[dev-dependencies]
test-temp-dir = "0.3.4"
